Structured Programming C++/Step5/Practical Assingment5/PA Step5/.metadata/.plugins/org.eclipse.cdt.ui/Task 4.build.log
23:33:28 **** Incremental Build of configuration Debug for project Task 4 ****
make all 
Building file: ../src/Task 4.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Task 4.d" -MT"src/Task\ 4.d" -o "src/Task 4.o" "../src/Task 4.cpp"
../src/Task 4.cpp:80:13: warning: enumeration values 'Scissor' and 'Paper' not handled in switch [-Wswitch]
    switch (compuser)
            ^
../src/Task 4.cpp:80:13: note: add missing switch cases
    switch (compuser)
            ^
../src/Task 4.cpp:83:9: error: 'case' statement not in switch statement
        case Scissor:
        ^
../src/Task 4.cpp:85:9: error: 'case' statement not in switch statement
        case Paper:
        ^
1 warning and 2 errors generated.
make: *** [src/Task 4.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

23:33:29 Build Failed. 3 errors, 1 warnings. (took 621ms)

